--- a/src/index.scss
+++ b/src/index.scss
@@ -36,7 +36,7 @@ a {
 }
 
 .is-hidden {
-  display: none;
+  display: none !important;
 }
 
 .fz-xl  { font-size: 2.125em; }
